<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="15dp"
    android:elevation="30dp">

    <TextView
        android:id="@+id/wrapper"
        android:layout_width="0dp"
        android:layout_height="@dimen/stock_item_height"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/stock_item_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/stock_item_photo"
        android:contentDescription="@string/add"
        android:cropToPadding="false"
        android:foregroundGravity="fill_horizontal|fill"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/stock_description"
        app:layout_constraintStart_toStartOf="@+id/wrapper"
        app:layout_constraintTop_toTopOf="@+id/wrapper"
        app:srcCompat="@drawable/add_photo" />

    <TextView
        android:id="@+id/stock_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alice"
        android:maxLength="100"
        android:padding="5dp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/wrapper"
        app:layout_constraintEnd_toEndOf="@+id/wrapper"
        app:layout_constraintStart_toStartOf="@id/wrapper" />

    <TextView
        android:id="@+id/available_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/alice"
        android:gravity="center"
        android:text="@string/available_stock"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/wrapper"
        app:layout_constraintStart_toStartOf="@+id/wrapper"
        app:layout_constraintTop_toTopOf="@+id/wrapper" />

    <TextView
        android:id="@+id/relative"
        android:layout_width="wrap_content"
        android:layout_height="48dp"

        android:layout_marginStart="15dp"

        android:layout_marginTop="79dp"
        android:layout_marginBottom="79dp"
        android:padding="4dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/wrapper"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@+id/wrapper" />

    <ImageButton
        android:id="@+id/add_stock"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/add_stock_now"
        android:onClick="doSomething"
        app:layout_constraintBottom_toTopOf="@+id/stock_minus"
        app:layout_constraintEnd_toEndOf="@+id/wrapper"
        app:layout_constraintTop_toTopOf="@+id/available_text"
        app:srcCompat="@drawable/add_stock" />

    <ImageButton
        android:id="@+id/stock_minus"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="68dp"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/minus"
        app:layout_constraintBottom_toTopOf="@+id/stock_description"
        app:layout_constraintEnd_toEndOf="@+id/wrapper"
        app:layout_constraintTop_toBottomOf="@+id/add_stock"
        app:srcCompat="@drawable/vector_box_minus" />

    <ImageButton
        android:id="@+id/editQuantity"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="79dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="79dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/edit"
        app:layout_constraintBottom_toBottomOf="@id/stock_description"
        app:layout_constraintEnd_toEndOf="@+id/wrapper"
        app:layout_constraintTop_toTopOf="@+id/wrapper"
        app:srcCompat="@drawable/ic_baseline_edit_24" />
</androidx.constraintlayout.widget.ConstraintLayout>